# m4mon8

./: .gitignore  Cargo.toml  mini.JLinkScript  mini.jdebug  mini_rel.jdebug
src/: dynbox.rs  main.rs  usb.rs
stm32l4xx-hal-0.5.0/: .cargo_vcs_info.json  Cargo.toml
stm32l4xx-hal-0.5.0/src/: gpio.rs
