cargo-features = ["profile-overrides"] 

[package]
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "m4mon8"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.6.0", features = ["inline-asm"] }
cortex-m-rt = "0.6.10"
nb = "0.1.2"
embedded-hal = "0.2.3"
jlink_rtt = "0.1.0"
panic_rtt = "0.2.0"
volatile-register = "0.2.0"
usb-device = "0.2.3"
#stm32-usbd = { version = "0.4", features = ["stm32l4", "ram_size_1024", "ram_access_2x16", "lpm_support", "bcd_support", "dp_pull_up_support"] }
stm32-usbd = { version = "0.4", features = ["stm32l4", "ram_size_1024", "ram_access_2x16"] }
ellocopo = "0.1"
cortex-m-rtfm = "0.5.0-beta.1"

[dependencies.stm32l4xx-hal]
version = "0.5.0"
features = ["stm32l4x5", "rt"]

[patch.crates-io]
stm32l4xx-hal = { path = "stm32l4xx-hal-0.5.0" }
jlink_rtt = { path = "jlink_rtt-0.1.0" }
ellocopo = { path = "../ellocopo/ellocopo" }
cortex-m-rtfm = {path = "cortex-m-rtfm" }

[build-dependencies]
built = "0.3"

[[bin]]
name = "m4mon8"
test = false
bench = false

[profile.dev.overrides."*"] 
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
#opt-level = "z"
opt-level = 3